<resources>
    <string name="app_name" translatable="false">Snake</string>
    <string name="Sair">Sair</string>
    <string name="Configurações">Configurações</string>
    <string name="Começar">Novo Jogo</string>
    <string name="Snake">Snake</string>
    <string name="Fácil">Fácil</string>
    <string name="Normal">Normal</string>
    <string name="Difícil">Difícil</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Continuar">Continuar</string>
    <string name="NovoJogo">Novo Jogo</string>
    <string name="vocePerdeu">Você perdeu!</string>
    <string name="pontuacao">Sua pontuação foi: </string>
    <string name="salvaesair">Salvar e sair</string>
</resources>
