<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="br.eaj.tads.acobrona.Principal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/Snake"
        android:textColor="@color/letras"
        android:textSize="70dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:src="@drawable/snake" />

    <Button
        android:id="@+id/novoJogo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="casual"
        android:onClick="botao1"
        android:padding="8dp"
        android:text="@string/Começar"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/letras"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/configurar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="casual"
        android:padding="8dp"
        android:onClick="botao2"
        android:text="@string/Configurações"
        android:textColor="@color/letras"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sair"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="casual"
        android:padding="8dp"
        android:text="@string/Sair"
        android:onClick="botao3"
        android:textColor="@color/letras"
        android:textSize="18dp"
        android:textStyle="bold" />

</LinearLayout>
